--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>StackOverflow Tag Trends</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      text-align: center;
-    }
-    canvas {
-      margin-top: 30px;
-      max-width: 100%;
-    }
-  </style>
 </head>
 <body>
-  <h1>Top 10 StackOverflow Tags (Normalized Usage)</h1>
+  <h1>Top StackOverflow Tags (Normalized)</h1>
   <canvas id="tagChart" width="1000" height="500"></canvas>
 
   <script>
@@ -29,26 +17,22 @@
         new Chart(ctx, {
           type: 'line',
           data: {
-            labels: chartData.labels,  // [2022, 2023, 2024]
+            labels: chartData.labels,
             datasets: chartData.datasets
           },
           options: {
             responsive: true,
-            maintainAspectRatio: false,
             plugins: {
               legend: {
-                position: 'top',
+                position: 'bottom',
                 labels: {
-                  boxWidth: 14,
+                  boxWidth: 12,
                   usePointStyle: true
                 }
               },
               title: {
                 display: true,
-                text: 'Normalized Frequency of Top 10 StackOverflow Tags (2022–2024)',
-                font: {
-                  size: 18
-                }
+                text: 'Top 10 StackOverflow Tags (Normalized Usage Over 2022–2024)'
               }
             },
             scales: {
@@ -57,7 +41,7 @@
                 max: 1,
                 title: {
                   display: true,
-                  text: 'Normalized Frequency'
+                  text: 'Relative Frequency'
                 }
               },
               x: {
@@ -69,10 +53,6 @@
             }
           }
         });
-      })
-      .catch(error => {
-        document.body.innerHTML += `<p style="color:red;">Error loading chart data: ${error}</p>`;
-        console.error("Failed to load chart data:", error);
       });
   </script>
 </body>
