--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         // Function to fetch data from API
         async function fetchData() {
             try {
-                const response = await fetch('https://harzrawat.pythonanywhere.com/api/graphs');
+                const response = await fetch('https://nidhisu.pythonanywhere.com/api/graphs');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
